--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongodb": "^3.6.5",
     "redis": "^3.0.2",
     "sip": "0.0.6",
-    "util": "^0.12.3"
+    "util": "^0.12.3",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
