--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "api_testing",
-  "version": "1.0.0",
+  "name": "sip_lnp_server",
+  "version": "1.1.0",
   "description": "test to create api using nodejs. to be used to connect to db and handle data",
   "main": "server.js",
   "scripts": {
