--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sip_lnp_server",
-  "version": "1.1.0",
-  "description": "test to create api using nodejs. to be used to connect to db and handle data",
+  "version": "1.2.0",
+  "description": basic sip lnp server with REST API to allow for DB handling",
   "main": "server.js",
   "scripts": {
     "dev": "node server.js",
@@ -21,7 +21,8 @@
     "redis": "^3.0.2",
     "sip": "0.0.6",
     "util": "^0.12.3",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
