copied server.js to siplnp.js for pm2 integration changed package.json to reflect the pm2 install

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "dev": "node server.js",
-    "test": "node server.js"
+    "test": "node server.js",
+    "lnp" : "node siplnp.js"
   },
   "keywords": [
     "api",
@@ -14,15 +15,16 @@
   "author": "Haim Natan",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongodb": "^3.6.5",
-    "redis": "^3.0.2",
+    "mongodb": "^3.6.6",
+    "redis": "^3.1.1",
     "sip": "0.0.6",
     "util": "^0.12.3",
     "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.1"
+    "winston-daily-rotate-file": "^4.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
