--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "sip_lnp_server",
-  "version": "1.2.0",
-  "description": "basic sip lnp server with REST API to allow for DB handling",
+  "name": "lnp_server",
+  "version": "2.0.0",
+  "description": "basic lnp server with REST API to allow for DB handling , Supports SIP and ENUM queries",
   "main": "server.js",
   "scripts": {
     "dev": "node server.js",
     "test": "node server.js",
-    "lnp": "node siplnp.js"
+    "lnp": "node lnpserver.js"
   },
   "keywords": [
     "api",
